--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -119,7 +119,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_default" translatable="false">
-        wifi,bt,inversion,dnd,cell,airplane,rotation,flashlight,location,cast,hotspot,network_adb,caffeine
+        wifi,bt,inversion,dnd,cell,airplane,rotation,flashlight,location,cast,hotspot,network_adb,caffeine,immersive_mode
     </string>
     <!--TODO add fastcharge,screencolor,lockscreen,network_adb-->
 
